# mgmt-agent-exp

./: .env.example  README.md  README_MANAGEMENT_AGENT.md  agent_logs.json  cash_flow_verification.py  check_db_structure.py  continuous_multi_day_simulation.py  continuous_multi_day_simulation_backup.py  continuous_procurement_simulation.py  db_clean.py  demo_management_agent.py  demo_notebook.py  demo_simple.py  duckduckgo_response.html  kpi_visualization.py  multi_agent_simulation.py  pyproject.toml  pyproject.toml.backup  requirements.txt  simple_demo.py  simple_verification.py  step_evaluation_verification.py  store_simulation_scenarios.py  tes_OpenAI.py  test_business_metrics_integration.py  test_case_a copy.py  test_case_a.py  test_cumulative_profit_fix.py  test_db_setup.py  test_duckduckgo.py  test_env_vars.py  test_flow_integration.py  test_inventory_complete_analysis.py  test_inventory_visibility.py  test_metrics_integration.py  test_nodes_unit.py  test_openai_api.py  test_sales_processing_debug.py  test_simulation.py  test_storage_depletion_check.py  (+4 more)
!old/: pyproject.toml.backup2
data/: vending_bench.db
doc/: Vending-Bench-spec.md  agent_design.md  design.md  design_tmp.html  glossary.md  langchain_management_agent_design.md  requirements.md  tasks.md
scripts/: continuous_multi_day_simulation.py  continuous_procurement_simulation.py  kpi_visualization.py
src/: main.py
static/: index.html
steering/: product.md  structure.md  tech.md
tests/: __init__.py  test_accounting.py  test_agents.py  test_flow_integration.py  test_inventory_bug_analysis.py  test_inventory_setup.py  test_kpi_calculation_debug.py  test_management_agent.py  test_multi_agent_integration.py  test_payment.py  test_recorder_agent.py  test_scenarios.py  test_storage_depletion_check.py  test_three_day_integration.py
visualizations/: kpi_data_20251010_070704.csv  kpi_data_20251010_071020.csv  kpi_data_20251010_072312.csv  kpi_data_20251010_073822.csv  kpi_data_20251010_081213.csv  kpi_data_20251010_082137.csv  kpi_data_20251010_082506.csv  kpi_data_20251010_082558.csv  kpi_data_20251010_083855.csv  kpi_data_20251010_084129.csv  kpi_data_20251010_084224.csv  kpi_data_20251010_084727.csv  kpi_data_20251010_084855.csv  kpi_data_20251010_090338.csv  kpi_data_20251010_091155.csv  kpi_data_20251010_153626.csv  kpi_data_20251010_154853.csv  kpi_data_20251010_160646.csv  kpi_data_20251015_103722.csv  kpi_data_20251015_105510.csv  kpi_data_20251015_111816.csv  kpi_data_20251015_122309.csv  kpi_data_20251015_131848.csv  kpi_data_20251015_134030.csv  (+31 more)
(+100 files in other folders)
